<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:padding="12dp"
    tools:context="com.example.android.toledoquiz.Q8Activity">

    <!-- CardView for question eight -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/question_eight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <!-- Yellow line at top of card -->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#ffda00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/q8_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q8_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/q8_text"
                    android:textColor="#333333"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/q8_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/q8_label"
                    android:textColor="#15397f"
                    android:textSize="48sp" />

            </LinearLayout>

            <!-- Choices or Answer Input -->
            <CheckBox
                android:id="@+id/q8_choice1_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:text="@string/q8_choice1"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#666666" />

            <CheckBox
                android:id="@+id/q8_choice2_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:text="@string/q8_choice2"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#666666" />

            <CheckBox
                android:id="@+id/q8_choice3_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:text="@string/q8_choice3"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#666666" />

            <CheckBox
                android:id="@+id/q8_choice4_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingStart="4dp"
                android:text="@string/q8_choice4"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="#666666" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/q8_answer_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/secondary_button_selector"
                    android:drawableEnd="@drawable/ic_navigate_next_white_18dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_18dp"
                    android:padding="8dp"
                    android:text="@string/next_question"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>