<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/view_padding"
    tools:context="com.example.android.toledoquiz.Q3Activity">

    <!-- CardView for question one -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/question_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <!-- Yellow line at top of card -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_accent_line"
            android:background="@color/card_accent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <LinearLayout
                android:id="@+id/q3_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q3_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:text="@string/q3_text"
                    android:textColor="@color/darkergray"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/q3_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/q3_label"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/q_label" />

            </LinearLayout>

            <!-- Choices or Answer Input
                Correct answers are 1 and 4 -->
            <CheckBox
                android:id="@+id/q3_choice1_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/checkbox_margin_bottom"
                android:paddingLeft="@dimen/checkbox_padding"
                android:paddingStart="@dimen/checkbox_padding"
                android:text="@string/q3_choice1"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/mediumgray" />

            <CheckBox
                android:id="@+id/q3_choice2_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/checkbox_margin_bottom"
                android:paddingLeft="@dimen/checkbox_padding"
                android:paddingStart="@dimen/checkbox_padding"
                android:text="@string/q3_choice2"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/mediumgray" />

            <CheckBox
                android:id="@+id/q3_choice3_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/checkbox_margin_bottom"
                android:paddingLeft="@dimen/checkbox_padding"
                android:paddingStart="@dimen/checkbox_padding"
                android:text="@string/q3_choice3"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/mediumgray" />

            <CheckBox
                android:id="@+id/q3_choice4_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/checkbox_padding"
                android:paddingStart="@dimen/checkbox_padding"
                android:text="@string/q3_choice4"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/mediumgray" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/action_button_top_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/q3_answer_button"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/secondary_button_selector"
                    android:drawableEnd="@drawable/ic_navigate_next_white_18dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_18dp"
                    android:padding="@dimen/button_padding"
                    android:text="@string/next_question"
                    android:textColor="@color/white"
                    android:textSize="@dimen/button_text_size" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>