<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.toledoquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/toledoskyline" />

    <ImageView
        android:id="@+id/rockets_logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/rocketslogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rockets_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:fontFamily="sans_serif-light"
        android:shadowColor="@color/black"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="5"
        android:text="@string/quiz_welcome"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start_quiz_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button_selector"
        android:text="@string/begin_quiz"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/button_text_size" />

</RelativeLayout>
