<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/view_padding"
    tools:context="com.example.android.toledoquiz.Q10Activity">

    <!-- CardView for question ten -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/question_ten"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation">

        <!-- Yellow line at top of card -->
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_accent_line"
            android:background="@color/card_accent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <LinearLayout
                android:id="@+id/q10_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q10_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingEnd="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:text="@string/q10_text"
                    android:textColor="@color/darkergray"
                    android:textSize="@dimen/question_text" />

                <TextView
                    android:id="@+id/q10_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/q10_label"
                    android:textColor="@color/q_label_text_color"
                    android:textSize="@dimen/q_label" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/q10_choices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/q10_choice1_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/radio_button_padding"
                    android:text="@string/q10_choice1"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/mediumgray" />

                <!-- Correct Answer -->
                <RadioButton
                    android:id="@+id/q10_choice2_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/radio_button_padding"
                    android:text="@string/q10_choice2"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/mediumgray" />

                <RadioButton
                    android:id="@+id/q10_choice3_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/radio_button_padding"
                    android:text="@string/q10_choice3"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/mediumgray" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/action_button_top_margin"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/q10_answer_button"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/secondary_button_selector"
                    android:text="@string/finish"
                    android:textColor="@color/button_text_color"
                    android:textSize="@dimen/button_text_size" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>