<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:padding="12dp"
    tools:context="com.example.android.toledoquiz.Q2Activity">

    <!-- CardView for question one -->
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/question_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        card_view:cardCornerRadius="2dp"
        card_view:cardElevation="2dp">

        <!-- Yellow line at top of card -->
        <View
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="#ffda00" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/q1_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/q1_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingEnd="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/q2_text"
                    android:textColor="#333333"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/q1_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/q2_label"
                    android:textColor="#15397f"
                    android:textSize="48sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/q2_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_answer"
                android:inputType="text" />
            <!-- Correct answer is Ohio -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/q2_answer_button"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/secondary_button_selector"
                    android:drawableEnd="@drawable/ic_navigate_next_white_18dp"
                    android:drawableRight="@drawable/ic_navigate_next_white_18dp"
                    android:padding="8dp"
                    android:text="@string/next_question"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</ScrollView>
